[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-core>=0.3.52",
    "langchain-groq>=0.3.2",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "scipy>=1.15.2",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.1",
    "langchain-community>=0.3.21",
    "requests>=2.32.3",
    "sqlitedict>=2.1.0",
    "diskcache>=5.6.3",
    "streamlit-extras>=0.6.0",
    "chromadb>=0.6.3",
]
